--- a/pom.xml
+++ b/pom.xml
@@ -9,18 +9,10 @@
     <name>demoSpring</name>
     <description>demoSpring</description>
 
-    <properties>
-        <java.version>17</java.version>
-        <spring-boot.version>3.2.0</spring-boot.version>
-    </properties>
-
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-            <version>${spring-boot.version}</version>
-            <scope>provided</scope>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
         </dependency>
     </dependencies>
-
 </project>
