--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,17 @@
     <name>demoSpring</name>
     <description>demoSpring</description>
 
+    <properties>
+        <java.version>21</java.version>
+        <spring-boot.version>2.7.8</spring-boot.version>
+    </properties>
+
     <dependencies>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>${spring-boot.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
