--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.example</groupId>
     <artifactId>demoSpring</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>demoSpring</name>
     <description>demoSpring</description>
 
@@ -13,6 +13,13 @@
         <java.version>21</java.version>
         <spring-boot.version>2.7.8</spring-boot.version>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/ShredderG/demoSpring</url>
+        </repository>
+    </distributionManagement>
 
     <dependencies>
         <dependency>
